--- a/src/main/resources/css/pos-styles.css
+++ b/src/main/resources/css/pos-styles.css
@@ -1,6 +1,6 @@
 /* 
 Modern POS System Stylesheet
-Save as: src/main/resources/css/pos-styles.css
+Save as: src/main/resources/css/pos-styles.css updates
 */
 
 /* Root color scheme */
